# pvt-llm-api

./: Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e74e87dcab1_create_settings_table.py
src/: main.py
src/api/v1/: schemas.py
src/api/v1/routers/: generate.py  models.py
src/api/v1/services/: ollama_service.py  setting_service.py
src/db/models/: __init__.py  setting.py
tests/: conftest.py
tests/routers/: test_generate.py  test_models.py
